# zerocopy

./: Cargo.toml  bitbucket-pipelines.yml
.cargo/: config.toml
src/: byteorder.rs  lib.rs
zerocopy-copy-derive/: Cargo.toml
zerocopy-copy-derive/src/: lib.rs
zerocopy-derive/: Cargo.toml
zerocopy-derive/src/: lib.rs
zerocopy-jackson-derive/: Cargo.toml
