[package]
name = "zerocopy"
version = "0.6.1"
edition = "2021"
authors = ["Joshua Liebow-Feeser <joshlf@google.com>"]
description = "Utilities for zero-copy parsing and serialization"
# license-file = "../../../LICENSE"
# repository = "https://fuchsia.googlesource.com/fuchsia/+/HEAD/src/lib/zerocopy"

include = ["src/*", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true

[features]
alloc = []
simd = []
simd-nightly = ["simd"]

[dependencies]
zerocopy-derive = { version = "0.3.1", path = "zerocopy-derive" }
byteorder = { version = "1.3", default-features = false }

[dev-dependencies]
rand = "0.6"
