[package]
name = "zerocopy-jackson"
version = "0.6.1"
edition = "2021"
authors = ["Joshua Liebow-Feeser <joshlf@google.com>"]
description = "Utilities for zero-copy parsing and serialization"
# license-file = "../../../LICENSE"
# repository = "https://fuchsia.googlesource.com/fuchsia/+/HEAD/src/lib/zerocopy"

include = ["src/*", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true

[features]
alloc = []
bytes = ["dep:bytes"]
simd = []
simd-nightly = ["simd"]

[dependencies]
bytes = { version = "1.1.0", optional = true }
byteorder = { version = "1.3", default-features = false }
zerocopy-jackson-derive = { version = "0.3.1", path = "zerocopy-jackson-derive", registry = "monucrates" }

[dev-dependencies]
rand = "0.6"
