[package]
name = "zerocopy-copy"
version = "0.6.2"
edition = "2021"
authors = ["Joshua Liebow-Feeser <joshlf@google.com>"]
description = "Utilities for zero-copy parsing and serialization"

include = ["src/*", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true

[features]
alloc = []
simd = []
simd-nightly = ["simd"]

[dependencies]
bytes = { version = "1.1.0", optional = true }
byteorder = { version = "1.3", default-features = false }
zerocopy-copy-derive = { version = "0.3.1", path = "zerocopy-copy-derive" }

[dev-dependencies]
rand = "0.6"
