[package]
edition = "2018"
name = "zerocopy-copy-derive"
version = "0.3.1"
authors = ["Joshua Liebow-Feeser <joshlf@google.com>"]
description = "Custom derive for traits from the zerocopy crate"

include = ["src/*", "tests/*", "Cargo.toml"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.1"
quote = "1.0.10"
syn = { version = "1.0.5", features = ["visit"] }

[dev-dependencies]
zerocopy-copy = { path = "../" }
compiletest_rs = "0.7"
